// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaintedUsername Snapshots should match snapshot with URL paint (solid color fallback) 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "overflow": "visible",
      "position": "relative",
    }
  }
>
  <View
    style={
      {
        "alignSelf": "flex-start",
        "position": "relative",
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.4}
      style={
        [
          {
            "fontSize": 16,
            "lineHeight": 24,
          },
          {
            "color": "#fafafa",
            "fontFamily": "Montserrat_400Regular",
            "fontStyle": "normal",
            "fontVariant": undefined,
            "fontWeight": undefined,
            "textAlign": "left",
          },
          [
            [
              {
                "color": "black",
                "fontSize": 14,
                "fontWeight": "bold",
                "lineHeight": 17,
              },
              undefined,
              {},
            ],
            {
              "opacity": 0,
            },
          ],
        ]
      }
      textBreakStrategy="simple"
    >
      UrlPaintUser: 
    </Text>
    <View
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      testID="masked-view"
    >
      <View
        style={
          {
            "backgroundColor": "transparent",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.4}
          style={
            [
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              {
                "color": "#fafafa",
                "fontFamily": "Montserrat_400Regular",
                "fontStyle": "normal",
                "fontVariant": undefined,
                "fontWeight": undefined,
                "textAlign": "left",
              },
              [
                [
                  {
                    "color": "black",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "lineHeight": 17,
                  },
                  undefined,
                  {},
                ],
                {
                  "color": "black",
                },
              ],
            ]
          }
          textBreakStrategy="simple"
        >
          UrlPaintUser: 
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "position": "relative",
          }
        }
      >
        <View
          style={
            [
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "backgroundColor": "rgba(255, 165, 0, 1.000)",
              },
            ]
          }
        />
        <View
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        >
          <View
            contentFit="fill"
            source={
              {
                "uri": "https://example.com/paint.png",
              }
            }
            style={
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="expo-image"
          />
        </View>
        <Text
          maxFontSizeMultiplier={1.4}
          style={
            [
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              {
                "color": "#fafafa",
                "fontFamily": "Montserrat_400Regular",
                "fontStyle": "normal",
                "fontVariant": undefined,
                "fontWeight": undefined,
                "textAlign": "left",
              },
              [
                [
                  {
                    "color": "black",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "lineHeight": 17,
                  },
                  undefined,
                  {},
                ],
                {
                  "opacity": 0,
                },
              ],
            ]
          }
          textBreakStrategy="simple"
        >
          UrlPaintUser: 
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`PaintedUsername Snapshots should match snapshot with fallback color only 1`] = `
<Text
  maxFontSizeMultiplier={1.4}
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#fafafa",
        "fontFamily": "Montserrat_400Regular",
        "fontStyle": "normal",
        "fontVariant": undefined,
        "fontWeight": undefined,
        "textAlign": "left",
      },
      [
        {
          "fontSize": 14,
          "fontWeight": "bold",
          "lineHeight": 17,
        },
        {
          "color": "#9B59B6",
        },
        undefined,
      ],
    ]
  }
  textBreakStrategy="simple"
>
  FallbackUser: 
</Text>
`;

exports[`PaintedUsername Snapshots should match snapshot with linear gradient paint 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "overflow": "visible",
      "position": "relative",
    }
  }
>
  <Text
    maxFontSizeMultiplier={1.4}
    pointerEvents="none"
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#fafafa",
          "fontFamily": "Montserrat_400Regular",
          "fontStyle": "normal",
          "fontVariant": undefined,
          "fontWeight": undefined,
          "textAlign": "left",
        },
        [
          {
            "position": "absolute",
          },
          [
            {
              "color": "black",
              "fontSize": 14,
              "fontWeight": "bold",
              "lineHeight": 17,
            },
            undefined,
            {},
          ],
          {
            "color": "transparent",
            "textShadowColor": "rgba(254, 118, 148, 1.000)",
            "textShadowOffset": {
              "height": 0,
              "width": 0,
            },
            "textShadowRadius": 0.30000000000000004,
          },
        ],
      ]
    }
    textBreakStrategy="simple"
  >
    RoseGoldUser: 
  </Text>
  <View
    style={
      {
        "alignSelf": "flex-start",
        "position": "relative",
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.4}
      style={
        [
          {
            "fontSize": 16,
            "lineHeight": 24,
          },
          {
            "color": "#fafafa",
            "fontFamily": "Montserrat_400Regular",
            "fontStyle": "normal",
            "fontVariant": undefined,
            "fontWeight": undefined,
            "textAlign": "left",
          },
          [
            [
              {
                "color": "black",
                "fontSize": 14,
                "fontWeight": "bold",
                "lineHeight": 17,
              },
              undefined,
              {},
            ],
            {
              "opacity": 0,
            },
          ],
        ]
      }
      textBreakStrategy="simple"
    >
      RoseGoldUser: 
    </Text>
    <View
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      testID="masked-view"
    >
      <View
        style={
          {
            "backgroundColor": "transparent",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.4}
          style={
            [
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              {
                "color": "#fafafa",
                "fontFamily": "Montserrat_400Regular",
                "fontStyle": "normal",
                "fontVariant": undefined,
                "fontWeight": undefined,
                "textAlign": "left",
              },
              [
                [
                  {
                    "color": "black",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "lineHeight": 17,
                  },
                  undefined,
                  {},
                ],
                {
                  "color": "black",
                },
              ],
            ]
          }
          textBreakStrategy="simple"
        >
          RoseGoldUser: 
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "position": "relative",
          }
        }
      >
        <View
          style={
            [
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "backgroundColor": "transparent",
              },
            ]
          }
        />
        <View
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        >
          <ViewManagerAdapter_ExpoLinearGradient
            colors={
              [
                4294866580,
                4294953140,
                4294921587,
              ]
            }
            endPoint={
              [
                1,
                0.5,
              ]
            }
            locations={
              [
                0,
                0.5,
                1,
              ]
            }
            startPoint={
              [
                0,
                0.5000000000000001,
              ]
            }
            style={
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
        <Text
          maxFontSizeMultiplier={1.4}
          style={
            [
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              {
                "color": "#fafafa",
                "fontFamily": "Montserrat_400Regular",
                "fontStyle": "normal",
                "fontVariant": undefined,
                "fontWeight": undefined,
                "textAlign": "left",
              },
              [
                [
                  {
                    "color": "black",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "lineHeight": 17,
                  },
                  undefined,
                  {},
                ],
                {
                  "opacity": 0,
                },
              ],
            ]
          }
          textBreakStrategy="simple"
        >
          RoseGoldUser: 
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`PaintedUsername Snapshots should match snapshot with long username 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "overflow": "visible",
      "position": "relative",
    }
  }
>
  <View
    style={
      {
        "alignSelf": "flex-start",
        "position": "relative",
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.4}
      style={
        [
          {
            "fontSize": 16,
            "lineHeight": 24,
          },
          {
            "color": "#fafafa",
            "fontFamily": "Montserrat_400Regular",
            "fontStyle": "normal",
            "fontVariant": undefined,
            "fontWeight": undefined,
            "textAlign": "left",
          },
          [
            [
              {
                "color": "black",
                "fontSize": 14,
                "fontWeight": "bold",
                "lineHeight": 17,
              },
              undefined,
              {},
            ],
            {
              "opacity": 0,
            },
          ],
        ]
      }
      textBreakStrategy="simple"
    >
      VeryLongUsernameForTestingPurposes: 
    </Text>
    <View
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      testID="masked-view"
    >
      <View
        style={
          {
            "backgroundColor": "transparent",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.4}
          style={
            [
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              {
                "color": "#fafafa",
                "fontFamily": "Montserrat_400Regular",
                "fontStyle": "normal",
                "fontVariant": undefined,
                "fontWeight": undefined,
                "textAlign": "left",
              },
              [
                [
                  {
                    "color": "black",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "lineHeight": 17,
                  },
                  undefined,
                  {},
                ],
                {
                  "color": "black",
                },
              ],
            ]
          }
          textBreakStrategy="simple"
        >
          VeryLongUsernameForTestingPurposes: 
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "position": "relative",
          }
        }
      >
        <View
          style={
            [
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "backgroundColor": "transparent",
              },
            ]
          }
        />
        <View
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        >
          <ViewManagerAdapter_ExpoLinearGradient
            colors={
              [
                4291049729,
                4294940210,
                4291049729,
              ]
            }
            endPoint={
              [
                1,
                0.5,
              ]
            }
            locations={
              [
                0,
                0.5,
                1,
              ]
            }
            startPoint={
              [
                0,
                0.5000000000000001,
              ]
            }
            style={
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
        <Text
          maxFontSizeMultiplier={1.4}
          style={
            [
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              {
                "color": "#fafafa",
                "fontFamily": "Montserrat_400Regular",
                "fontStyle": "normal",
                "fontVariant": undefined,
                "fontWeight": undefined,
                "textAlign": "left",
              },
              [
                [
                  {
                    "color": "black",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "lineHeight": 17,
                  },
                  undefined,
                  {},
                ],
                {
                  "opacity": 0,
                },
              ],
            ]
          }
          textBreakStrategy="simple"
        >
          VeryLongUsernameForTestingPurposes: 
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`PaintedUsername Snapshots should match snapshot with multiple shadows 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "overflow": "visible",
      "position": "relative",
    }
  }
>
  <Text
    maxFontSizeMultiplier={1.4}
    pointerEvents="none"
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#fafafa",
          "fontFamily": "Montserrat_400Regular",
          "fontStyle": "normal",
          "fontVariant": undefined,
          "fontWeight": undefined,
          "textAlign": "left",
        },
        [
          {
            "position": "absolute",
          },
          [
            {
              "color": "black",
              "fontSize": 14,
              "fontWeight": "bold",
              "lineHeight": 17,
            },
            undefined,
            {},
          ],
          {
            "color": "transparent",
            "textShadowColor": "rgba(0, 0, 0, 1.000)",
            "textShadowOffset": {
              "height": 0,
              "width": 0,
            },
            "textShadowRadius": 0.30000000000000004,
          },
        ],
      ]
    }
    textBreakStrategy="simple"
  >
    DivisionUser: 
  </Text>
  <Text
    maxFontSizeMultiplier={1.4}
    pointerEvents="none"
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#fafafa",
          "fontFamily": "Montserrat_400Regular",
          "fontStyle": "normal",
          "fontVariant": undefined,
          "fontWeight": undefined,
          "textAlign": "left",
        },
        [
          {
            "position": "absolute",
          },
          [
            {
              "color": "black",
              "fontSize": 14,
              "fontWeight": "bold",
              "lineHeight": 17,
            },
            undefined,
            {},
          ],
          {
            "color": "transparent",
            "textShadowColor": "rgba(156, 76, 22, 1.000)",
            "textShadowOffset": {
              "height": 0,
              "width": 0,
            },
            "textShadowRadius": 3,
          },
        ],
      ]
    }
    textBreakStrategy="simple"
  >
    DivisionUser: 
  </Text>
  <View
    style={
      {
        "alignSelf": "flex-start",
        "position": "relative",
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.4}
      style={
        [
          {
            "fontSize": 16,
            "lineHeight": 24,
          },
          {
            "color": "#fafafa",
            "fontFamily": "Montserrat_400Regular",
            "fontStyle": "normal",
            "fontVariant": undefined,
            "fontWeight": undefined,
            "textAlign": "left",
          },
          [
            [
              {
                "color": "black",
                "fontSize": 14,
                "fontWeight": "bold",
                "lineHeight": 17,
              },
              undefined,
              {},
            ],
            {
              "opacity": 0,
            },
          ],
        ]
      }
      textBreakStrategy="simple"
    >
      DivisionUser: 
    </Text>
    <View
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      testID="masked-view"
    >
      <View
        style={
          {
            "backgroundColor": "transparent",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.4}
          style={
            [
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              {
                "color": "#fafafa",
                "fontFamily": "Montserrat_400Regular",
                "fontStyle": "normal",
                "fontVariant": undefined,
                "fontWeight": undefined,
                "textAlign": "left",
              },
              [
                [
                  {
                    "color": "black",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "lineHeight": 17,
                  },
                  undefined,
                  {},
                ],
                {
                  "color": "black",
                },
              ],
            ]
          }
          textBreakStrategy="simple"
        >
          DivisionUser: 
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "position": "relative",
          }
        }
      >
        <View
          style={
            [
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "backgroundColor": "transparent",
              },
            ]
          }
        />
        <View
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        >
          <ViewManagerAdapter_ExpoLinearGradient
            colors={
              [
                4288433174,
                4291328050,
                4286725135,
              ]
            }
            endPoint={
              [
                1,
                0.5,
              ]
            }
            locations={
              [
                0,
                0.5,
                1,
              ]
            }
            startPoint={
              [
                0,
                0.5000000000000001,
              ]
            }
            style={
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
        <Text
          maxFontSizeMultiplier={1.4}
          style={
            [
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              {
                "color": "#fafafa",
                "fontFamily": "Montserrat_400Regular",
                "fontStyle": "normal",
                "fontVariant": undefined,
                "fontWeight": undefined,
                "textAlign": "left",
              },
              [
                [
                  {
                    "color": "black",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "lineHeight": 17,
                  },
                  undefined,
                  {},
                ],
                {
                  "opacity": 0,
                },
              ],
            ]
          }
          textBreakStrategy="simple"
        >
          DivisionUser: 
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`PaintedUsername Snapshots should match snapshot with radial gradient paint 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "overflow": "visible",
      "position": "relative",
    }
  }
>
  <Text
    maxFontSizeMultiplier={1.4}
    pointerEvents="none"
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#fafafa",
          "fontFamily": "Montserrat_400Regular",
          "fontStyle": "normal",
          "fontVariant": undefined,
          "fontWeight": undefined,
          "textAlign": "left",
        },
        [
          {
            "position": "absolute",
          },
          [
            {
              "color": "black",
              "fontSize": 14,
              "fontWeight": "bold",
              "lineHeight": 17,
            },
            undefined,
            {},
          ],
          {
            "color": "transparent",
            "textShadowColor": "rgba(0, 96, 128, 1.000)",
            "textShadowOffset": {
              "height": 0,
              "width": 0,
            },
            "textShadowRadius": 0.30000000000000004,
          },
        ],
      ]
    }
    textBreakStrategy="simple"
  >
    FlowerchildUser: 
  </Text>
  <View
    style={
      {
        "alignSelf": "flex-start",
        "position": "relative",
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.4}
      style={
        [
          {
            "fontSize": 16,
            "lineHeight": 24,
          },
          {
            "color": "#fafafa",
            "fontFamily": "Montserrat_400Regular",
            "fontStyle": "normal",
            "fontVariant": undefined,
            "fontWeight": undefined,
            "textAlign": "left",
          },
          [
            [
              {
                "color": "black",
                "fontSize": 14,
                "fontWeight": "bold",
                "lineHeight": 17,
              },
              undefined,
              {},
            ],
            {
              "opacity": 0,
            },
          ],
        ]
      }
      textBreakStrategy="simple"
    >
      FlowerchildUser: 
    </Text>
    <View
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      testID="masked-view"
    >
      <View
        style={
          {
            "backgroundColor": "transparent",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.4}
          style={
            [
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              {
                "color": "#fafafa",
                "fontFamily": "Montserrat_400Regular",
                "fontStyle": "normal",
                "fontVariant": undefined,
                "fontWeight": undefined,
                "textAlign": "left",
              },
              [
                [
                  {
                    "color": "black",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "lineHeight": 17,
                  },
                  undefined,
                  {},
                ],
                {
                  "color": "black",
                },
              ],
            ]
          }
          textBreakStrategy="simple"
        >
          FlowerchildUser: 
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "position": "relative",
          }
        }
      >
        <View
          style={
            [
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "backgroundColor": "transparent",
              },
            ]
          }
        />
        <View
          onLayout={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        />
        <Text
          maxFontSizeMultiplier={1.4}
          style={
            [
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              {
                "color": "#fafafa",
                "fontFamily": "Montserrat_400Regular",
                "fontStyle": "normal",
                "fontVariant": undefined,
                "fontWeight": undefined,
                "textAlign": "left",
              },
              [
                [
                  {
                    "color": "black",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "lineHeight": 17,
                  },
                  undefined,
                  {},
                ],
                {
                  "opacity": 0,
                },
              ],
            ]
          }
          textBreakStrategy="simple"
        >
          FlowerchildUser: 
        </Text>
      </View>
    </View>
  </View>
</View>
`;
